--- a/publishing/GPS-permission-popup/GPS-permission-popup.css
+++ b/publishing/GPS-permission-popup/GPS-permission-popup.css
@@ -7,8 +7,7 @@ body {
 .gps-permission-box {
     width: 270px;
     height: 130px;
-    background-color: #DADDFC;
-    opacity: 0.8;
+    background-color: rgba(218, 221, 252, 0.8);
     border-radius: 14px;
     padding-top: 19px; 
 
@@ -24,8 +23,16 @@ body {
 
 /* 팝업 - 부엉이 우편함 gps 설명 */
 .gps-permission-explain {
+    font-weight: normal;
     margin-top: 7px;
     font-size: 13px;
+}
+
+/* 허용 버튼 상단 선 */
+hr {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    border-top: 1px solid rgba(60, 60, 67, 0.29);
 }
 
 /* 버튼 플렉스 박스 */
@@ -36,12 +43,17 @@ body {
 }
 
 button {
+    flex-grow: 1;
+    flex-basis: 90px;
     font-size: 17px;
-    font-weight: bold;
-    margin-top: 20px;
-    padding: 0 30px;
+    font-weight: normal;
     color: #007AFF;
     background-color: transparent !important;
     outline: none;
     border: none;
+}
+
+.btn-separate-line {
+    height: 44px;
+    border-left: 1px solid rgba(60, 60, 67, 0.29);
 }
