fix : 팝업 버튼 font-weight 통일

--- a/publishing/GPS-permission-popup/GPS-permission-popup.css
+++ b/publishing/GPS-permission-popup/GPS-permission-popup.css
@@ -46,7 +46,7 @@ button {
     flex-grow: 1;
     flex-basis: 90px;
     font-size: 17px;
-    font-weight: normal;
+    font-weight: bold;
     color: #007AFF;
     background-color: transparent !important;
     outline: none;
