--- a/publishing/join-publishing/join-publishing.css
+++ b/publishing/join-publishing/join-publishing.css
@@ -52,3 +52,14 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size:13px;}
     font-family: 'Noto Sans KR', sans-serif;
     color:white;
 }
+
+#joinBtn:hover{
+    width: 300px;
+    height: 50px;
+    background-color:#828ED1;
+    border-radius: 8px;
+    border-style: hidden;
+    font-size: 20px;
+    font-family: 'Noto Sans KR', sans-serif;
+    color:white;
+}
